# E9E

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server-start.sh
server-files/: server.properties  test-script.sh
src/: commands.py  main.py  server.py  utils.py
